--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "protractor": "protractor",
     "e2e": "npm run protractor",
     "test": "karma start",
-    "remove-http-typings": "rimraf node_modules/angular2/bundles/typings/angular2/http.d.ts",
     "remove-tsd-loader-typings": "rimraf node_modules/typescript-simple-loader/typescript-simple-loader.d.ts",
-    "tsd-update": "npm run remove-http-typings && npm run remove-tsd-loader-typings && tsd reinstall --overwrite",
+    "tsd-update": "npm run remove-tsd-loader-typings && tsd reinstall --overwrite",
     "postinstall": "npm run tsd-update && tsd install && tsd link",
     "prestart": "npm install",
     "start": "npm run server"
@@ -37,14 +36,13 @@
   },
   "homepage": "https://github.com/angular-class/angular2-webpack-starter",
   "dependencies": {
-    "angular2": "2.0.0-alpha.36",
-    "ngHttp": "file:src/bindings/_fixed_cjs_http",
+    "angular2": "2.0.0-alpha.37",
     "reflect-metadata": "^0.1.1",
     "rx": "^2.5.3",
     "zone.js": "^0.5.4"
   },
   "devDependencies": {
-    "css-loader": "^0.17.0",
+    "css-loader": "^0.18.0",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.7.0",
     "file-loader": "^0.8.1",
@@ -57,14 +55,15 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
+    "object-assign": "^4.0.1",
     "phantomjs": "^1.9.17",
     "protractor": "^2.1.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.4.3",
     "style-loader": "^0.12.2",
     "tsd": "^0.6.4",
-    "typescript": "^1.5.3",
-    "typescript-simple-loader": "^0.3.2",
+    "typescript": "^1.6.0-beta",
+    "typescript-simple-loader": "^0.3.7",
     "url-loader": "^0.5.5",
     "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
