--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES5",
     "module": "commonjs",
     "removeComments": true,
     "emitDecoratorMetadata": true,
@@ -13,8 +13,12 @@
     "test/injector.spec.ts",
     "test/sanity-test.spec.ts",
     "src/app/app.spec.ts",
+    "src/app/app.ts",
+    "src/app/directives/x-large.ts",
     "src/app/directives/x-large.spec.ts",
     "src/app/providers/title.spec.ts",
+    "src/app/providers/title.ts",
+    "src/app/home/home.ts",
     "src/bootstrap.ts",
     "src/vendor.ts",
     "src/polyfills.ts"
