--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf node_modules doc typings coverage dist && npm cache clean",
-    "clean:ng2": "rimraf node_modules/angular2/manual_typings node_modules/angular2/typings node_modules/angular2/bundles/typings",
     "clean:dist": "rimraf dist",
     "preclean:install": "npm run clean",
     "clean:install": "npm install",
@@ -23,7 +22,7 @@
     "prebuild:prod": "npm run clean:dist",
     "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
     "server": "npm run server:dev",
-    "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached  --content-base src/",
+    "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached",
     "server:prod": "http-server dist --cors",
     "webdriver:update": "webdriver-manager update",
     "webdriver:start": "webdriver-manager start",
@@ -35,9 +34,10 @@
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc --options typedoc.json --exclude **/*.spec.ts ./src/",
     "start": "npm run server:dev",
-    "pretypings-install": "npm run clean:ng2",
+    "fix:ng2": "rimraf node_modules/angular2/manual_typings node_modules/angular2/typings node_modules/angular2/bundles/typings && cp -R src/.ng2-patch/. node_modules/angular2",
+    "pretypings-install": "npm run fix:ng2",
     "typings-install": "typings install",
-    "postinstall": "npm run typings-install"
+    "postinstall": "npm run typings-install && npm run fix:ng2"
   },
   "dependencies": {
     "angular2": "2.0.0-beta.1",
