--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "prebuild:dev": "npm run clean:dist",
     "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
     "prebuild:prod": "npm run clean:dist",
-    "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached  --bail",
-    "server": "npm run server:dev:hmr",
-    "server:dev": "webpack-dev-server --inline --progress --profile --colors --watch --display-error-details --display-cached  --content-base src/",
-    "server:dev:hmr": "npm run server:dev -- --hot",
+    "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
+    "server": "npm run server:dev",
+    "server:dev": "webpack-dev-server --hot --inline --progress --profile --colors --watch --display-error-details --display-cached  --content-base src/",
     "server:prod": "http-server dist --cors",
     "webdriver:update": "webdriver-manager update",
     "webdriver:start": "webdriver-manager start",
@@ -34,7 +33,7 @@
     "test": "karma start",
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc --options typedoc.json --exclude **/*.spec.ts ./src/",
-    "start": "npm run server",
+    "start": "npm run server:dev",
     "typings-install": "typings install",
     "postinstall": "npm run typings-install",
     "preversion": "npm test",
@@ -45,7 +44,7 @@
     "angular2": "2.0.0-beta.7",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.33.3",
-    "es7-reflect-metadata": "^1.6.0",
+    "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.5.15"
   },
@@ -59,7 +58,6 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.9.0",
     "http-server": "^0.9.0",
-    "ie-shim": "^0.1.0",
     "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
