--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:dev": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
     "prebuild:prod": "npm run clean:dist",
     "build:prod": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached --bail",
-    "server": "npm run server:dev",
+    "server": "npm run server:dev:hmr",
     "server:dev": "node --max-old-space-size=4096 ./node_modules/webpack-dev-server/bin/webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/",
     "server:dev:hmr": "npm run server:dev -- --hot",
     "server:prod": "http-server dist --cors",
@@ -57,7 +57,7 @@
     "zone.js": "0.6.4"
   },
   "devDependencies": {
-    "angular2-hmr": "~0.2.2",
+    "angular2-hmr": "~0.1.2",
     "awesome-typescript-loader": "~0.16.2",
     "compression-webpack-plugin": "^0.3.0",
     "copy-webpack-plugin": "^1.1.1",
@@ -102,7 +102,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "webpack-md5-hash": "^0.0.5"
+    "webpack-md5-hash": "^0.0.5",
+    "webpack-merge": "^0.8.4"
   },
   "repository": {
     "type": "git",
