--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
     "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
     "server": "npm run server:dev",
-    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
+    "server:dev": "webpack-dashboard -- webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:prod": "http-server dist --cors",
     "webdriver:update": "npm run webdriver-manager update",
@@ -69,7 +69,6 @@
     "@angularclass/webpack-toolkit": "^1.3.3",
     "@angularclass/request-idle-callback": "^1.0.7",
     "@angularclass/conventions-loader": "^1.0.2",
-    "angular2-template-loader": "^0.5.0",
     "ie-shim": "^0.1.0",
     "core-js": "^2.4.0",
     "rxjs": "5.0.0-beta.6",
@@ -82,18 +81,18 @@
     "@types/core-js": "^0.9.28",
     "@types/hammerjs": "^2.0.28",
     "@types/jasmine": "^2.2.29",
-    "@types/node": "^6.0.38",
+    "@types/node": "^4.0.29",
     "@types/protractor": "^1.5.16",
     "@types/selenium-webdriver": "^2.44.26",
     "@types/source-map": "^0.1.26",
     "@types/uglify-js": "^2.0.27",
     "@types/webpack": "^1.12.29",
     "angular2-hmr": "~0.8.0",
-    "awesome-typescript-loader": "^2.2.1",
+    "angular2-template-loader": "^0.5.0",
+    "awesome-typescript-loader": "1.1.1",
     "codelyzer": "~0.0.21",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.24.0",
-    "es6-promise-loader": "^1.0.1",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
@@ -103,12 +102,12 @@
     "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
-    "karma-chrome-launcher": "^2.0.0 ",
+    "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.8.0",
+    "karma-webpack": "1.7.0",
     "parse5": "^1.5.1",
     "protractor": "^3.2.2",
     "raw-loader": "0.5.1",
@@ -119,13 +118,14 @@
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
     "ts-helpers": "1.1.1",
-    "ts-node": "^1.3.0",
-    "tslint": "^3.15.0-dev.0",
+    "ts-node": "^0.9.1",
+    "tslint": "^3.15.1",
     "tslint-loader": "^2.1.3",
     "typedoc": "^0.4.4",
     "typescript": "^2.0.0-beta",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.21",
+    "webpack-dashboard": "^0.1.8",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-md5-hash": "^0.0.5",
